Add bump versions gulp task

--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "gulp-util": "*"
   },
   "devDependencies": {
-    "mocha": "*",
-    "expect": "*",
-    "coffee-script": "*"
+    "coffee-script": "*",
+    "gulp": "*",
+    "gulp-util": "*",
+    "gulp-bump": "*"
   }
 }
